--- a/src/components/dialog.scss
+++ b/src/components/dialog.scss
@@ -11,7 +11,7 @@
   background-color: white;
   border-radius: $radius-md;
   box-shadow: $shadow-md;
-  transition: all $duration-fast;
+  transition: $duration-fast;
 
   &:hover {
     box-shadow: $shadow-xs;
