--- a/src/components/progress.scss
+++ b/src/components/progress.scss
@@ -8,11 +8,11 @@ $progress-value-color: $gray-600;
   @extend %initial;
 
   width: 100%;
-  height: 1rem;
+  height: 0.75rem;
   overflow: hidden;
   border-radius: $radius-md;
   box-shadow: $shadow-md;
-  transition: all $duration-slow;
+  transition: $duration-slow;
 
   &::-webkit-progress-bar {
     background-color: $progress-bar-color;
