--- a/src/utils/variables.scss
+++ b/src/utils/variables.scss
@@ -36,9 +36,9 @@ $font-lg: 1.125rem !default;
 $font-xl: 1.25rem !default;
 
 // font family
-$font-sans: ui-sans-serif, system-ui, -apple-system, 'BlinkMacSystemFont',
-  'Segoe UI', 'Roboto', 'Helvetica Neue', 'Arial', 'Noto Sans', sans-serif,
-  'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji' !default;
+$font-sans: -apple-system, 'BlinkMacSystemFont', 'Segoe UI', 'Roboto',
+  'Helvetica Neue', 'Arial', 'Noto Sans', sans-serif, 'Apple Color Emoji',
+  'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji' !default;
 $font-serif: ui-serif, 'Georgia', 'Cambria', 'Times New Roman', 'Times', serif !default;
 $font-mono: ui-monospace, 'SFMono-Regular', 'Menlo', 'Monaco', 'Consolas',
   'Liberation Mono', 'Courier New', monospace !default;
