--- a/src/utils/extends.scss
+++ b/src/utils/extends.scss
@@ -1,13 +1,64 @@
 @use 'variables' as *;
 
-%initial {
-  padding: 0;
-  margin: 0;
-  font-family: inherit;
-  font-size: 1em;
-  color: currentcolor;
-  background: none;
-  border: none;
-  outline: none;
+%text {
+  &::placeholder {
+    color: $gray-500;
+    opacity: 1;
+  }
+
+  &:read-only {
+    background-color: $gray-200;
+  }
+}
+
+%control {
+  &:hover {
+    border-color: $blue-500;
+  }
+
+  &:focus-visible {
+    border-color: $blue-500;
+    outline: none;
+    box-shadow: $shadow-focus;
+  }
+
+  &:disabled {
+    pointer-events: none;
+    background-color: $gray-200;
+  }
+}
+
+%button {
+  height: 2rem;
+  padding: 0 1rem;
+  font-size: $font-sm;
+  font-weight: $font-medium;
+  color: $white;
+  cursor: pointer;
+  background-color: $blue-500;
+  border-color: $blue-500;
+  border-radius: $radius-sm;
+  transition: $duration-fast;
   appearance: none;
+
+  &:hover {
+    background-color: $blue-400;
+    border-color: $blue-400;
+  }
+
+  &:active {
+    background-color: $blue-600;
+    border-color: $blue-600;
+  }
+
+  &:focus-visible {
+    outline: none;
+    box-shadow: $shadow-focus;
+  }
+
+  &:disabled {
+    pointer-events: none;
+    background-color: $blue-300;
+    border-color: $blue-300;
+  }
 }
