--- a/src/elements/progress.scss
+++ b/src/elements/progress.scss
@@ -1,33 +1,24 @@
 @use '../utils/variables' as *;
+@use '../utils/functions' as *;
 @use '../utils/extends' as *;
+@use '../utils/mixins' as *;
 
 :where(progress) {
-  position: relative;
-  width: 100%;
-  height: 0.75rem;
-  overflow: hidden;
-  border-radius: $radius-sm;
-  appearance: none;
+  @extend %progress;
 
   @mixin progress-bar {
     background-color: $gray-300;
   }
 
   @mixin progress-value {
-    background-color: $blue-500;
-    background-image: linear-gradient(
-      45deg,
-      rgba($white, 0.15) 25%,
-      transparent 25%,
-      transparent 50%,
-      rgba($white, 0.15) 50%,
-      rgba($white, 0.15) 75%,
-      transparent 75%,
-      transparent
-    );
     background-size: 0.75rem 0.75rem;
     border-radius: 0.5rem;
     transition: $duration-slow;
+    @include gradient-striped;
+
+    @include themeify {
+      background-color: themed('primary');
+    }
   }
 
   &::-webkit-progress-bar {
@@ -47,23 +38,26 @@
     @include progress-value;
   }
 
-  @keyframes progress-indeterminate {
-    from {
-      transform: translateX(-100%);
-    }
-
-    to {
-      transform: translateX(400%);
+  @keyframes stripes {
+    100% {
+      background-position-x: 0.75rem;
     }
   }
 
   &:indeterminate::before {
     position: absolute;
-    width: 25%;
+    width: 100%;
     height: 100%;
     content: '';
-    background-color: $blue-500;
     border-radius: 0.5rem;
-    animation: 1s linear infinite progress-indeterminate;
+    background-color: $blue-500;
+    background-repeat: repeat;
+    background-size: 0.75rem 0.75rem;
+    animation: 0.5s linear infinite stripes;
+    @include gradient-striped;
+
+    @include themeify {
+      background-color: themed('primary');
+    }
   }
 }
