--- a/src/index.scss
+++ b/src/index.scss
@@ -10,6 +10,7 @@
 // import elements
 @forward 'elements/label';
 @forward 'elements/input';
+@forward 'elements/meter';
 @forward 'elements/select';
 @forward 'elements/option';
 @forward 'elements/button';
