--- a/src/utils/extends.scss
+++ b/src/utils/extends.scss
@@ -1,31 +1,42 @@
 @use 'variables' as *;
+@use 'functions' as *;
+@use 'mixins' as *;
 
 %text {
-  &::placeholder {
-    color: $gray-500;
-    opacity: 1;
-  }
-
   &:read-only {
-    background-color: $gray-200;
+    background-color: rgba($gray-500, 0.3);
   }
 }
 
 %control {
-  &:hover {
-    border-color: $blue-500;
-  }
-
   &:focus-visible {
-    border-color: $blue-500;
     outline: none;
-    box-shadow: $shadow-focus;
   }
 
   &:disabled {
     pointer-events: none;
-    background-color: $gray-200;
+    background-color: rgba($gray-500, 0.3);
   }
+
+  @include themeify {
+    &:hover {
+      border-color: themed('primary');
+    }
+
+    &:focus-visible {
+      border-color: themed('primary');
+      box-shadow: shadow-focus(themed('primary'));
+    }
+  }
+}
+
+%progress {
+  position: relative;
+  width: 100%;
+  height: 0.75rem;
+  overflow: hidden;
+  border-radius: $radius-sm;
+  appearance: none;
 }
 
 %button {
@@ -33,32 +44,41 @@
   padding: 0 1rem;
   font-size: $font-sm;
   font-weight: $font-medium;
-  color: $white;
+  color: $gray-100;
   cursor: pointer;
-  background-color: $blue-500;
-  border-color: $blue-500;
   border-radius: $radius-sm;
   transition: $duration-fast;
   appearance: none;
 
-  &:hover {
-    background-color: $blue-400;
-    border-color: $blue-400;
-  }
-
-  &:active {
-    background-color: $blue-600;
-    border-color: $blue-600;
-  }
-
   &:focus-visible {
     outline: none;
-    box-shadow: $shadow-focus;
   }
 
   &:disabled {
     pointer-events: none;
-    background-color: $blue-300;
-    border-color: $blue-300;
+  }
+
+  @include themeify {
+    border-color: themed('primary');
+    background-color: themed('primary');
+
+    &:hover {
+      border-color: lighten(themed('primary'), 10%);
+      background-color: lighten(themed('primary'), 10%);
+    }
+
+    &:active {
+      border-color: darken(themed('primary'), 10%);
+      background-color: darken(themed('primary'), 10%);
+    }
+
+    &:focus-visible {
+      box-shadow: shadow-focus(themed('primary'));
+    }
+
+    &:disabled {
+      border-color: lighten(themed('primary'), 20%);
+      background-color: lighten(themed('primary'), 20%);
+    }
   }
 }
