--- a/src/utils/icons.scss
+++ b/src/utils/icons.scss
@@ -22,7 +22,7 @@ $xmlns: 'http://www.w3.org/2000/svg';
 @function icon-minus($color: $black) {
   @return svg-to-data-url(
     "<svg xmlns='#{$xmlns}' viewBox='0 0 20 20'>" +
-      "<path fill='none' stroke='#{$color}' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 3 3 6-6'/>" +
+      "<path fill='none' stroke='#{$color}' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 h8'/>" +
       '</svg>'
   );
 }
