--- a/src/utils/variables.scss
+++ b/src/utils/variables.scss
@@ -1,7 +1,20 @@
+@use 'sass:map';
 @use 'sass:math';
+
 @use 'colors' as *;
+@use '../themes/light.scss' as *;
+@use '../themes/dark.scss' as *;
 
 @forward 'colors';
+@forward '../themes/light.scss';
+@forward '../themes/dark.scss';
+
+// theme
+$theme: $theme-light !default;
+$theme-map: (
+  'light': $theme-light,
+  'dark': $theme-dark
+) !default;
 
 // adaptive
 $design-width: 750 !default;
@@ -11,26 +24,6 @@ $slice-width: 32 !default;
 $breakpoint-sm: 640px !default;
 $breakpoint-md: 1024px !default;
 $breakpoint-lg: 1280px !default;
-
-// radius
-$radius-xs: 0.25rem !default;
-$radius-sm: 0.375rem !default;
-$radius-md: 0.5rem !default;
-$radius-lg: 0.625rem !default;
-$radius-xl: 0.75rem !default;
-
-// shadow
-$shadow-xs: 0 1.5px 12px 2px rgba(0 0 0 / 10%) !default;
-$shadow-sm: 0 1.5px 10px 1.5px rgba(0 0 0 / 15%) !default;
-$shadow-md: 0 1.5px 8px 1px rgba(0 0 0 / 20%) !default;
-$shadow-lg: 0 1.5px 6px 0.5px rgba(0 0 0 / 25%) !default;
-$shadow-xl: 0 1.5px 4px 0 rgba(0 0 0 / 30%) !default;
-$shadow-focus: 0 0 0 0.15rem rgba($blue-500, 0.2) !default;
-
-// transition
-$duration-fast: 100ms !default;
-$duration-base: 200ms !default;
-$duration-slow: 300ms !default;
 
 // font size
 $font-xs: 0.75rem !default;
@@ -57,3 +50,22 @@ $font-semibold: 600 !default;
 $font-bold: 700 !default;
 $font-extrabold: 800 !default;
 $font-black: 900 !default;
+
+// radius
+$radius-xs: 0.25rem !default;
+$radius-sm: 0.375rem !default;
+$radius-md: 0.5rem !default;
+$radius-lg: 0.625rem !default;
+$radius-xl: 0.75rem !default;
+
+// transition
+$duration-fast: 100ms !default;
+$duration-base: 200ms !default;
+$duration-slow: 300ms !default;
+
+// shadow
+$shadow-xs: 0 1.5px 12px 2px rgba($black, 10%) !default;
+$shadow-sm: 0 1.5px 10px 1.5px rgba($black, 15%) !default;
+$shadow-md: 0 1.5px 8px 1px rgba($black, 20%) !default;
+$shadow-lg: 0 1.5px 6px 0.5px rgba($black, 25%) !default;
+$shadow-xl: 0 1.5px 4px 0 rgba($black, 30%) !default;
