--- a/src/index.scss
+++ b/src/index.scss
@@ -11,9 +11,12 @@
 @forward 'elements/label';
 @forward 'elements/input';
 @forward 'elements/meter';
+@forward 'elements/table';
 @forward 'elements/select';
 @forward 'elements/option';
 @forward 'elements/button';
 @forward 'elements/dialog';
 @forward 'elements/progress';
 @forward 'elements/textarea';
+@forward 'elements/fieldset';
+@forward 'elements/legend';
