--- a/src/utils/extends.scss
+++ b/src/utils/extends.scss
@@ -14,12 +14,12 @@
   }
 
   &:disabled {
-    pointer-events: none;
+    cursor: not-allowed;
     background-color: rgba($gray-500, 0.3);
   }
 
   @include themeify {
-    &:hover {
+    &:not(:disabled):hover {
       border-color: themed('primary');
     }
 
@@ -55,7 +55,7 @@
   }
 
   &:disabled {
-    pointer-events: none;
+    cursor: not-allowed;
   }
 
   @include themeify {
