--- a/src/utils/icons.scss
+++ b/src/utils/icons.scss
@@ -33,3 +33,14 @@ $xmlns: 'http://www.w3.org/2000/svg';
       "<circle r='#{$radius}' fill='#{$color}'/>" + '</svg>'
   );
 }
+
+@function icon-loading($color: $black) {
+  @return svg-to-data-url(
+    "<svg xmlns='#{$xmlns}' viewBox='0 0 24 24'>" +
+      "<circle cx='12' cy='12' r='10' fill='none' stroke='#{$color}' stroke-width='4' stroke-dasharray='75 100' stroke-dashoffset='-5' stroke-linecap='round'>" +
+      "<animate attributeName='stroke-dasharray' values='1, 100; 44.5, 100; 44.5, 100' keyTimes='0; 0.5; 1' dur='1.5s' repeatCount='indefinite' />" +
+      "<animate attributeName='stroke-dashoffset' values='0; -17.5; -62' keyTimes='0; 0.5; 1' dur='1.5s' repeatCount='indefinite' />" +
+      "<animateTransform attributeName='transform' type='rotate' from='0 12 12' to='360 12 12' dur='2s' repeatCount='indefinite' />" +
+      '</circle>' + '</svg>'
+  );
+}
