--- a/src/elements/option.scss
+++ b/src/elements/option.scss
@@ -8,8 +8,21 @@
     background-color: $gray-200;
   }
 
-  &:hover {
-    color: $white;
-    background-color: $blue-200;
+  &:not(:disabled) {
+    cursor: pointer;
+
+    &:hover {
+      color: $white;
+      background-color: $blue-200;
+    }
+  }
+}
+
+:where(optgroup) {
+  padding-block-start: 0.375rem;
+  padding-inline: 0.75rem;
+
+  :first-child {
+    margin-block-start: 0.375rem;
   }
 }
