feat: add components

--- a/src/elements/input.scss
+++ b/src/elements/input.scss
@@ -90,6 +90,7 @@
   &[type='radio' i] {
     width: 1em;
     height: 1em;
+    vertical-align: -0.125em;
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
