--- a/src/index.scss
+++ b/src/index.scss
@@ -23,3 +23,5 @@
 
 // import components
 @forward 'components/loading.scss';
+@forward 'components/details.scss';
+@forward 'components/tooltip.scss';
