--- a/src/components/meter.scss
+++ b/src/components/meter.scss
@@ -13,7 +13,7 @@
   @mixin meter-value($level) {
     background-size: 0.75rem 0.75rem;
     border-radius: 0.5rem;
-    transition: $duration-slow;
+    transition-duration: $duration-slow;
     @include gradient-striped;
 
     @include themeify {
