--- a/src/forms/textarea.scss
+++ b/src/forms/textarea.scss
@@ -5,7 +5,7 @@
   width: 100%;
   padding: 0.375rem 0.75rem;
   border-radius: $radius-sm;
-  transition: $duration-fast;
+  transition-duration: $duration-fast;
   appearance: none;
   @extend %text;
   @extend %control;
