feat: nav style

--- a/src/index.scss
+++ b/src/index.scss
@@ -17,6 +17,7 @@
 @forward 'forms/fieldset';
 
 // import components
+@forward 'components/nav';
 @forward 'components/meter';
 @forward 'components/table';
 @forward 'components/dialog';
